--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -26,7 +26,7 @@ $bg
 			&:last-child
 				display none
 		center(450px)
-			
+
 		p
 			text-align left
 			color white
@@ -36,10 +36,10 @@ $bg
 				text-align left
 				margin 0
 				font-weight 300
-				font-size rem(17px)
-				border-bottom 1px solid rgb(135, 116, 169)
+				font-size rem(16px)
+				border-bottom 1px solid rgb(68, 153, 205)
 				&:hover
-					background rgba(135,116,169,0.42)
+					background rgba(68, 153, 205, 0.42)
 	h1,h2
 		color: sec
 		text-align center
@@ -47,7 +47,7 @@ $bg
 		font-size rem(30px)
 		line-height 1
 		display block
-		font-variant-ligatures none 
+		font-variant-ligatures none
 		letter-spacing 9px
 		+above(cut)
 			letter-spacing 16px
@@ -74,7 +74,7 @@ $bg
 		padding-top 23px
 		text-align center
 		color sec
-		
+
 //Header Page
 .page-header
 	@extends $bg
