--- a/src/styl/_typo.styl
+++ b/src/styl/_typo.styl
@@ -16,7 +16,7 @@ a
 }
 
 mainFont(weight = 800)
-    font-family 'Open Sans', sans-serif
+    font-family 'Open Sans',Frutiger,Calibri,'Myriad Pro',Myriad,sans-serif;
     font-weight weight
     font-style normal
 
