--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -28,6 +28,13 @@
         max-width 100%
         margin rem(30px) auto
         display block
+        border solid 1px #ccc
+        padding rem(20px)
+    figcaption
+    	margin-top rem(-30px)
+    	p
+    		color #999
+    		font-style italic
     p, h1, h2, h3, h4,ul,ol, .tags, iframe
         max-width rem(800px)
         padding 0 rem(20px)
