--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,5 @@
+{% if page.comments %}
+
 <section class="comments">
 
     <h3>Comments</h3>
@@ -28,3 +30,5 @@
         }
     };
 </script>
+
+{% endif %}
