--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -40,11 +40,11 @@
         padding 0 rem(20px)
         margin 0 auto rem(30px)
         mainFont(300)
-        font-size 1rem
+        font-size rem(15px)
         line-height 2
-        letter-spacing 0.01rem 
+        letter-spacing 0.01rem
         +above(cut)
-            font-size 1rem
+            font-size rem(15px)
     p,li
         color texts
         code
